# docs/swagger.json
@@ -181,6 +181,15 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -323,7 +332,7 @@
                 },
                 "password": {
                     "type": "string",
-                    "maxLength": 128,
+                    "maxLength": 72,
                     "minLength": 8
                 },
                 "role_code": {
